50번 못풀었다

--- a/week10/50.md
+++ b/week10/50.md
@@ -1,3 +1,40 @@
 # 카카오 문제를 풀기로 함
 
+(순위 검색)
 https://programmers.co.kr/learn/courses/30/lessons/72412
+
+# 풀이 시간
+
+`43m07s64` 후 포기
+
+- [공백으로 문자열 자르기](https://chbuljumeok1997.tistory.com/42)
+
+```c++
+vector<string> str;
+int previous =0;
+int current=0;
+current= info[i].find(' ');
+//find는 찾을게 없으면 npos를 리턴함
+while(current!=string::npos){
+    string substring=info[i].substr(previous,current-previous);
+    str.push_back(substring);
+    previous = current+1;
+    current=info[i].find(' ',previous);
+}
+str.push_back(info[i].substr(previous,current-previous));
+```
+
+- [string to int](http://www.cplusplus.com/reference/string/stoi/)
+
+```c++
+ arr[language[str[0]]][position[str[1]]][howLong[str[2]]][food[str[3]]].push_back(stoi(str[4]));
+```
+
+- [string comapre](http://www.cplusplus.com/reference/string/string/compare/)
+-
+
+# 풀이
+
+대강적인 흐름은 잡았으나 처리하다 머리 뽀개지기 직전이라 포기했다.
+
+- https://yjyoon-dev.github.io/kakao/2021/01/29/kakao-ranksearch/ 이분은 천재인게 다름이 없다.
