51포기, 플로이드 와샬... 현실적으로 내가 이걸 시험시간내에 적용하는건 불가능이다

--- a/week10/51.md
+++ b/week10/51.md
@@ -1,3 +1,15 @@
 # 카카오 문제를 풀기로 함
 
 https://programmers.co.kr/learn/courses/30/lessons/72413
+
+# 풀이 시간
+
+5분만에 포기
+
+# 풀이
+
+역시 카카오다... 사람의 마음을 갈기갈기 찢어놓는구만.
+
+- 이분은 천재 아닙니까..? https://yjyoon-dev.github.io/kakao/2021/01/29/kakao-taxifee/
+
+플로이드 와샬? 이런거 나오면 절대로 풀수없다.
