54번은 풀이만 확인, 구간을 구하는게 맞긴했는데 너무 비효율적으로 구해서 틀린듯

--- a/week10/54.md
+++ b/week10/54.md
@@ -1,3 +1,15 @@
 # 카카오 문제를 풀기로 함
 
 https://programmers.co.kr/learn/courses/30/lessons/72414
+
+# 풀이 시간
+
+4m50s26 하고 포기
+
+# 풀이
+
+이건 예전에 시험때 본 문제 같은데, 지금봐도 모르는것보면 나는 할만큼 하긴했는데 안되는것 같다.
+
+- https://yjyoon-dev.github.io/kakao/2021/01/29/kakao-insertad/
+
+답을 보니까 그때 시험때 아예 구간을 만들어서 구했던게 맞긴한가보다
