52번 풀이, 39번 다시 푼것, 점화식을 잘 찾는건 어렵다

--- a/week10/52.md
+++ b/week10/52.md
@@ -6,6 +6,76 @@
 
 ## Question Summary
 
+22m55s69
+
 ## My solution summary
 
+이런문제는 무조건 어찌됬든 규칙을 찾아내는게 관건인것 같다.
+
+그러고 나서 구현은 for문을 돌리든 재귀호출을 하던은 내 코딩 스킬의 문제인가보다.
+
+- `arr`배열은 arr[n][m] 알약한개 n 개, 알약 반개 m개 있을때 얘를 다 먹는 경우의 수를 저장한다. 이때 arr[0][m]은 큰게 하나도 안남았기 때문에 반개짜리를 m일동안 먹는건 경우의 수가 무조건 같기 때문에 1으로 했다. HHHH, HHHHH 이런 경우 뿐이다.
+
+- arr[i][j] 의 경우 i > 0이면 한개를 먼저 먼저 먹을수도 있고 반개짜리를 먹을수도 있다(j>0). 각각은 arr[i][j] += arr[i-1][j+1], arr[i][j] += arr[i][j-1]; 이렇게 표현할 수 있다.
+
+- 이건 그래서 바텀업으로도 해결할 수 있다. 왜냐하면 arr[i][j]를 구할때 이미 arr[i-1][j+1]과 arr[i][j-1]은 구해져있기 때문이다.
+
+하지만 여전히 어려운것 같다.
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+long long arr[31][31];
+int pill;
+
+void printArr(){
+    for(int i = 0; i <= 30; i++){
+        for(int j = 0; j <= 30; j++){
+            cout << arr[i][j] << " ";
+        }
+        cout << "\n";
+    }
+}
+void get(){
+    for(int i = 0; i <= 30; i++){
+        for(int j = 0; j <= 30; j++){
+            if(i == 0){
+                arr[0][j] = 1;
+                continue;
+            }
+            if(i > 0){
+                arr[i][j] += arr[i-1][j+1];
+            }
+            if(j > 0){
+                arr[i][j] += arr[i][j-1];
+            }
+        }
+    }
+}
+
+int main() {
+    get();
+//    printArr();
+    while(true){
+        cin >> pill;
+        if(pill == 0){
+            break;
+        }
+
+        cout << arr[pill][0] << "\n";
+    }
+
+    return 0;
+}
+```
