--- a/week10/53.md
+++ b/week10/53.md
@@ -6,6 +6,164 @@ ABC: https://www.acmicpc.net/problem/12969
 
 ## Question Summary
 
+39m05s44
+
 ## My solution summary
 
+- 저번에 답을 보고 나서 이번에 어떻게 풀었다!!!
+
+- `string d[31][31][31][436];`이런 배열을 뒀다 각각의 의미는 d[a][b][c][k] A가 a개, B가 b개, C가 c개, K가 k개인 문자열이다. 여기는 여러가지 가능한것중에 아무거나 하나를 저장한다. (어찌됬든 여기까지만 어떻게 생겼으면 답이 나오기 때문)
+
+- 초기화는 이렇게 했다
+
+```c++
+    d[0][0][0][0] = "";
+    d[1][0][0][0] = "A";
+    d[0][1][0][0] = "B";
+    d[0][0][1][0] = "C";
+```
+
+시작은 저렇게 해서 어떻게 붙일질 했다.
+
+- 나는 아직 bottom up이 젤 이해가 잘되서 모든 경우를 만들었다.
+
+```c++
+for(int a = 0; a <= n; a++){
+    for(int b = 0; b <= (n-a); b++){
+        for(int c = 0; c <= (n-a-b); c++){
+            for(int k = 0; k <= kk; k++){
+                // 어쩌구
+            }
+        }
+    }
+}
+```
+
+이렇게 해서 a, b, c, k 의 모든 경우를 만들었다.
+
+```c++
+// d[a][b][c][k]
+if(a > 0 && d[a-1][b][c][k].compare("") != 0){
+    // 여기까지 해당하는 경우가 있다는 것
+    string temp = d[a-1][b][c][k];
+    temp += 'A';
+    d[a][b][c][k] = temp;
+}else if(b > 0 && k-a >= 0 && d[a][b-1][c][k-a].compare("") != 0){
+    // 여기까지 해당하는 경우가 있다는 것
+    string temp = d[a][b-1][c][k-a];
+    temp += 'B';
+    d[a][b][c][k] = temp;
+}else if(c > 0 && k-a-b >= 0 && d[a][b][c-1][k-a-b].compare("") != 0){
+    // 여기까지 해당하는 경우가 있다는 것
+    string temp = d[a][b][c-1][k-a-b];
+    temp += 'C';
+    d[a][b][c][k] = temp;
+}
+```
+
+- 이렇게 한 이유는 d[a][b][c][k]는 이전에 어떤 문자에 'A'를 붙인걸수도, 'B'를 붙인걸수도, 'C'를 붙인것일수 있기 때문이다. 여튼 앞에까지 만들어진 경우가 있다면
+
+  - A를 붙일땐 d[a-1][b][c][k] 까지 만들어졌는지 확인해야한다. 왜냐하면 'A'는 붙여도 k가 변하지 않기 때문이다.
+  - B를 붙일땐 d[a][b-1][c][k-a] 가 만들어졌는지 확인해야한다. 왜냐하면 'B'를 붙이면 a개만큼 k가 증가하기 때문이다.
+  - C를 붙일땐 d[a][b][c-1][k-a-b] 가 만들어졌는지 획안해야한다. 왜냐하면 'C'를 붙이면 k가 a+b개만큼 증가하기 때문이다.
+
+  이 세가지를 검사해서 하나라도 되면 만들수 있다는거다.
+
+- 그리고 담으로 넘어가기전에 아래를 검사해서 정답을 찾았는지 확인한다.
+
+  ```c++
+  if(a+b+c == n && k == kk){
+          if(d[a][b][c][k].compare("") != 0){
+              cout << d[a][b][c][k] << "\n";
+              return 0;
+          }
+      }
+  ```
+
+  이게 되면 답찾은거라 그냥 여기서 종료했다.
+
+  근데 for loop가 다끝날때까지도 못찾은거면 진짜 없는거라 -1을 출력해서 끝냈다. 최고로 효율 좋은건 아니지만 해냈다!
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+string d[31][31][31][436];
+int n, kk;
+
+int main() {
+    cin >> n >> kk;
+
+    d[0][0][0][0] = "";
+    d[1][0][0][0] = "A";
+    d[0][1][0][0] = "B";
+    d[0][0][1][0] = "C";
+
+//    cout << "kk " << kk << "\n";
+
+    for(int a = 0; a <= n; a++){
+        for(int b = 0; b <= (n-a); b++){
+            for(int c = 0; c <= (n-a-b); c++){
+                for(int k = 0; k <= kk; k++){
+                    if(a == 0 && b == 0 && c == 0 && k == 0){
+                        continue;
+                    }
+
+                    if(a == 1 && b == 0 && c == 0 && k == 0){
+                        continue;
+                    }
+
+                    if(a == 0 && b == 1 && c == 0 && k == 0){
+                        continue;
+                    }
+
+                    if(a == 0 && b == 0 && c == 1 && k == 0){
+                        continue;
+                    }
+
+                    // d[a][b][c][k]
+                    if(a > 0 && d[a-1][b][c][k].compare("") != 0){
+                        // 여기까지 해당하는 경우가 있다는 것
+                        string temp = d[a-1][b][c][k];
+                        temp += 'A';
+                        d[a][b][c][k] = temp;
+                    }else if(b > 0 && k-a >= 0 && d[a][b-1][c][k-a].compare("") != 0){
+                        // 여기까지 해당하는 경우가 있다는 것
+                        string temp = d[a][b-1][c][k-a];
+                        temp += 'B';
+                        d[a][b][c][k] = temp;
+                    }else if(c > 0 && k-a-b >= 0 && d[a][b][c-1][k-a-b].compare("") != 0){
+                        // 여기까지 해당하는 경우가 있다는 것
+                        string temp = d[a][b][c-1][k-a-b];
+                        temp += 'C';
+                        d[a][b][c][k] = temp;
+                    }
+
+//                    cout << a << " " << b << " " << c << " " << k << " " <<  d[a][b][c][k] << "\n";
+                    if(a+b+c == n && k == kk){
+                        if(d[a][b][c][k].compare("") != 0){
+                            cout << d[a][b][c][k] << "\n";
+                            return 0;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+
+    cout << -1 << "\n";
+
+    return 0;
+}
+```
