나중에 다시 풀자, 55번

--- a/week10/55.md
+++ b/week10/55.md
@@ -1,3 +1,108 @@
 # 카카오 문제를 풀기로 함
 
 https://programmers.co.kr/learn/courses/30/lessons/72415
+
+# 풀이 시간
+
+1h58m06s26 하다가 포기
+
+# 풀이
+
+- https://degurii.tistory.com/117
+- 염병...엄청 어렵게 해결하려고 했는데 그냥 어디 카드부터 방문할지를 순열로 돌려서 거기에 대해서 경우를 다 구해주면 된다고 한다.
+- https://yjyoon-dev.github.io/kakao/2021/01/29/kakao-paircard/
+
+```c++
+#include <string>
+#include <vector>
+#include <queue>
+#include <tuple>
+#include <iostream>
+using namespace std;
+
+int dx[4] = {0, 1, 0, -1};
+int dy[4] = {1, 0, -1, 0};
+int visited[4][4][9]; // (x,y)에 open된 카드를 들고 방문한 적이 있는지
+
+int bfs(vector<vector<int>> board, int r, int c){
+    // r, c, 뒤집은 것, 이동횟수, 현재 보드의 상태
+    queue<tuple<int, int, int, int, vector<vector<int>>>> q;
+    q.push(make_tuple(r, c, 0, 0,  board)); // 아직까지 아무 조작안했음, 현재까지 카드 찾은 상태
+    visited[r][c][0] = 1; // r, c에는 아무것도 안뒤집은 상태로 온거, 1은 도착은했지만 뒤집진 않은것, 2는 도착도 뒤집기도 한것
+
+    while(!q.empty()){
+        int x = get<0>(q.front());
+        int y = get<1>(q.front());
+        int open = get<2>(q.front());
+        int d = get<3>(q.front());
+        vector<vector<int>> b = get<4>(q.front()); // 현재의 보드 상태
+        q.pop();
+
+        // 보드가 다 비어있으면 정답
+        // cout << "open " << open << "\n";
+//         for(int i = 0; i < 4; i++){
+//             bool flag = false;
+//             for(int j = 0; j < 4; j++){
+// //                 if(i == 3 && j == 3 && b[i][j] == 0){
+// //                     cout << "return " << d << "\n";
+// //                     return d;
+// //                 }
+
+// //                 if(b[i][j] != 0){
+// //                     flag = true;
+// //                     break;
+// //                 }
+//                 cout << b[i][j] << " ";
+//             }
+//             cout << "\n";
+//             if(flag) break;
+//         }
+//         cout << "\n";
+
+        // cout << x << " " << y << " " << b[x][y] << " " << open << "\n";
+
+        if(open == 0 && b[x][y] != 0 && visited[x][y][open] == 1){
+            // 열린 것도 없고, 지금 카드가 있고, 이 카드에 도착한 적이 있는지(아무것도 안열린채로)
+            visited[x][y][open] = 2;
+            int temp = b[x][y];
+            b[x][y] = 0;
+            cout << "1. enter " << temp << " " << "\n";
+            q.push(make_tuple(x, y, temp, d+1, b));
+            b[x][y] = open;
+        }
+
+        if(open != 0 && open == b[x][y] && visited[x][y][open] == 1){
+            // 열린게 있고, 지금 카드가 서로 같고, 이 카드에 해당 카드가 열린채로 도착한 적이 있는지
+            visited[x][y][open] = 2;
+            b[x][y] = 0;
+            cout << "2. enter " << open << "\n";
+            q.push(make_tuple(x, y, 0, d+1, b));
+            b[x][y] = open;
+        }
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+
+            if(nx < 0 || nx >= 4 || ny < 0 || ny >= 4 || visited[nx][ny][open]){
+                continue;
+            }
+
+            visited[nx][ny][open] = 1;
+            q.push(make_tuple(nx, ny, open, d+1, b));
+        }
+
+        // cout << "\n";
+    }
+
+    return 0;
+}
+
+int solution(vector<vector<int>> board, int r, int c) {
+    int answer = 0;
+
+    answer = bfs(board, r, c);
+
+    return answer;
+}
+```
