56번 다시는 일어나지 말아야할 일

--- a/week10/56.md
+++ b/week10/56.md
@@ -1,3 +1,21 @@
 # 카카오 문제를 풀기로 함
 
 https://programmers.co.kr/learn/courses/30/lessons/72416
+
+# 풀이 시간
+
+14m39s51 하고 포기
+
+# 풀이
+
+dp 문제다.
+
+- 출처: https://countrysides.tistory.com/62
+  - 훌륭하신 분의 코드를 그냥 보기만하기로했다.
+
+어떤 번호의 노드를 선택할지 말지를 `dp[300001][2]`로 한다. 0이면 선택안한것, 1이면 선택한것
+
+- `min(solve(1, false), solve(1, true));` 1에서 시작해서 포함안하는 경우랑 포함하는 경우중 최소값이 답이 된다.
+  - 그다음은 잘 이해가 안된다.
+
+뭔가 이렇게 하면 되나보다 하는 느낌을 알게 되었다.
