57번 풀이, 어쩐일로 풀었다

--- a/week10/57.md
+++ b/week10/57.md
@@ -1,3 +1,102 @@
 # 카카오 문제를 풀기로 함
 
 https://programmers.co.kr/learn/courses/30/lessons/60058
+
+# 풀이 시간
+
+27m10s18
+
+- 전공 및 기타 등등 모든 것을 해서 드디어 카카오 블라인드 코테 1번 문제정도는 30분에 풀수있는 사람이 되었다.
+- 이런건 답이 없어도 무조건 규칙을 가지고 뭐든 만들어내야하는것 같다.
+- 멍청한 내 두뇌에게 할수있다고 자신감을 불어넣는 행위가 어쩌면 코딩테스트 아닐까
+
+# 풀이
+
+```c++
+#include <string>
+#include <vector>
+#include <iostream>
+#include <stack>
+using namespace std;
+
+bool checkBalance(string u){
+    if(u[0] == ')'){
+        return false;
+    }
+    stack<char> s;
+    s.push('(');
+    for(int i = 1; i < u.size(); i++){
+        if(u[i] == ')' && s.empty()){
+            return false;
+        }
+
+        if(u[i] == ')'){
+            s.pop();
+        }else{
+            s.push('(');
+        }
+    }
+
+    if(s.empty()){
+        return true;
+    }else {
+        return false;
+    }
+}
+string recursive(string p){
+    string answer = "";
+    if(p.length() == 0){
+        return answer;
+    }
+
+    int left = p[0] == '(' ? 1 : 0;
+    int right = p[0] == ')' ? 1 : 0;
+    // u는 균형이 잡힌 가장 짧은 부분
+    int splitPoint = p.length(); // 맨마지막에서 끊기면 그앞까진 다 그냥 u가 되고, v가 빈문자열
+    for(int i = 1; i < p.length(); i++){
+        if(p[i] == '('){
+            left++;
+        }else if(p[i] == ')'){
+            right++;
+        }
+
+        if(left == right){
+            splitPoint = i + 1; // i번째에서 조건을 맞추면 i까지 포함해서 잘라야함
+            break;
+        }
+    }
+
+    string u = p.substr(0, splitPoint);
+    string v =  p.substr(splitPoint);
+    // cout << p.substr(0, splitPoint) << " " << p.substr(splitPoint) << "\n";
+
+    if(checkBalance(u)){
+        // 균형이 있다면
+        answer += u;
+        answer += recursive(v);
+    }else{
+        string tempU = "(";
+        tempU += recursive(v);
+        tempU += ")";
+
+        for(int i = 1; i < u.size() - 1; i++){
+            if(u[i] == '('){
+                tempU += ')';
+            }else if(u[i] == ')'){
+                tempU += '(';
+            }
+        }
+        answer = tempU;
+    }
+
+    return answer;
+}
+
+string solution(string p) {
+    string answer = "";
+
+    answer = recursive(p);
+
+    return answer;
+}
+```
