58번 풀이, 어쩐지 풀었다

--- a/week10/58.md
+++ b/week10/58.md
@@ -1,3 +1,65 @@
 # 카카오 문제를 풀기로 함
 
 https://programmers.co.kr/learn/courses/30/lessons/60057
+
+# 풀이 시간
+
+12m21s14
+
+# 풀이
+
+- 이것도 풀었다. 이런문제는 일단 브루트포스하게 다 풀수있도록 만들면 되는거구만.
+
+```c++
+#include <string>
+#include <vector>
+#include <iostream>
+using namespace std;
+
+int compress(string s, int unit){
+    string prev =  s.substr(0, unit);
+    int acc = 1;
+    string answer = "";
+
+    for(int i = unit; i < s.length(); i += unit){
+        string cur = s.substr(i, unit);
+        if(cur.compare(prev) == 0){
+            // 같은거
+            acc++;
+        }else{
+            if(acc == 1){
+                answer += prev;
+            }else{
+                answer += to_string(acc);
+                answer += prev;
+            }
+
+            prev = cur;
+            acc = 1;
+        }
+    }
+
+    if(acc == 1){
+        answer += prev;
+    }else{
+        answer += to_string(acc);
+        answer += prev;
+    }
+
+    // cout << answer << "\n";
+    return answer.size();
+}
+
+int solution(string s) {
+    int answer = s.length();
+
+    for(int i = 1; i <= s.length(); i++){
+        int len = compress(s, i); // i씩 해서 압축
+        if(len < answer){
+            answer = len;
+        }
+    }
+
+    return answer;
+}
+```
