--- a/week11/62.md
+++ b/week11/62.md
@@ -1,8 +1,117 @@
 # Link to Question
 
+https://leetcode.com/problems/number-of-orders-in-the-backlog/
+
 ## Question Summary
+
+45m36s62
 
 ## My solution summary
 
+타입스크립트로 풀어봤는데,뭔가 어색해서 힘들었다. 근데 JavaScript로 점점더 많이 풀어보려고 생각중이다. 나는 매번 그냥 sorting을 했는데 minheap, maxheap을 사용하면 더 수월하게 풀수 있는가보다.
+
 ## My code
 
+```javascript
+interface backlogType {
+  price: number;
+  amount: number;
+}
+
+const comp = (a: backlogType, b: backlogType) => {
+  return a.price - b.price;
+};
+
+function getNumberOfBacklogOrders(orders: number[][]): number {
+  const buyBackLog: backlogType[] = [];
+  const sellBackLog: backlogType[] = [];
+
+  for (let i = 0; i < orders.length; i++) {
+    const price = orders[i][0];
+    let amount = orders[i][1];
+    const orderType = orders[i][2];
+
+    if (orderType === 0) {
+      // buy
+      if (sellBackLog.length === 0) {
+        buyBackLog.push({ price, amount });
+        buyBackLog.sort(comp);
+        continue;
+      }
+
+      let i = 0;
+      while (i < sellBackLog.length) {
+        const currSellPrice = sellBackLog[i].price;
+        if (currSellPrice > price) {
+          break;
+        }
+        if (sellBackLog[i].amount > amount) {
+          sellBackLog[i].amount -= amount;
+          amount = 0;
+          break;
+        }
+        if (sellBackLog[i].amount <= amount) {
+          amount -= sellBackLog[i].amount;
+          sellBackLog.shift();
+        }
+      }
+
+      if (amount > 0) {
+        buyBackLog.push({ price, amount });
+        buyBackLog.sort(comp);
+      }
+    } else {
+      // sell
+      if (buyBackLog.length === 0) {
+        sellBackLog.push({ price, amount });
+        sellBackLog.sort(comp);
+        continue;
+      }
+
+      let i = buyBackLog.length - 1;
+      while (i >= 0) {
+        const currBuyPrice = buyBackLog[i].price;
+
+        if (currBuyPrice < price) {
+          break;
+        }
+
+        if (buyBackLog[i].amount > amount) {
+          buyBackLog[i].amount -= amount;
+          amount = 0;
+          break;
+        }
+
+        if (buyBackLog[i].amount <= amount) {
+          amount -= buyBackLog[i].amount;
+          buyBackLog.pop();
+        }
+
+        i--;
+      }
+
+      if (amount > 0) {
+        sellBackLog.push({ price, amount });
+        sellBackLog.sort(comp);
+      }
+    }
+
+    // console.log(buyBackLog, sellBackLog);
+  }
+
+  let result = 0;
+  for (let i = 0; i < buyBackLog.length; i++) {
+    result += buyBackLog[i].amount;
+    result %= 1000000007;
+  }
+
+  for (let i = 0; i < sellBackLog.length; i++) {
+    result += sellBackLog[i].amount;
+    result %= 1000000007;
+  }
+
+  result %= 1000000007;
+
+  return result;
+}
+```
