--- a/week11/63.md
+++ b/week11/63.md
@@ -1,8 +1,274 @@
 # Link to Question
 
+https://leetcode.com/problems/maximum-value-at-a-given-index-in-a-bounded-array/
+
 ## Question Summary
+
+42m35s15
 
 ## My solution summary
 
+문제가 잘 이해가 안된다. greedy하게 모든 경우를 생성하려고 했는데, 문제를 제대로 이해를 못한것같다. + javascript로 갈아타려니까 좀 어색하긴하다.
+
+- 드디어 이해했다. index번째 숫자가 가장크도록 구성했을때 이 값이 뭔지 구하는 것. 완전 삽질했다.그래서 다시 풀려고 한다.
+
+- 핵심
+
+  - 길이가 n인 배열(nums)을 만든다
+  - 인덱스가 0~n-1까지 모든 숫자는 양수이다. (1이상)
+  - abs(nums[i] - nums[i+1]) <= 1: 이건 모든 숫자가 연속적이라는거다. 1 1 2 3 2 3 이런식
+  - nums배열의 합은 maxSum보다 작거나 같다.
+  - index번째의 값이 최대화되야한다. 이때 이 최대의 nums[index]를 반환해라.
+
+- [풀이](<https://leetcode.com/problems/maximum-value-at-a-given-index-in-a-bounded-array/discuss/1119708/C%2B%2B-Binary-Search-O(log-n)>)
+  - nums[index]를 최대화 한다는건, 이 값이 peak이고 이게 m이면 양옆에 m-1, m-2 일케 되야한다.
+  - 이때 maxSum 이 합의 최대고, 길이가 n인 배열이면 모든값이 최소 1은 되어야하기 때문에 `maxSum - n` 부터 확인하는거다.
+
 ## My code
 
+- 다시 정돈 해보는 코드
+  이렇게 하면 되긴한다. 내가 한 방식은 index번째값이 m이면 좌우값은 m-1, m-2 .... 또는 m-1, m-2,,,, 이렇게 된다고 정의했다. 그리고 이때 최소값은 1로 제한했다.
+
+  근데 이렇게 하면 시간초과가 난다. 이이상은 이해가 안된다!
+
+```javascript
+function maxValue(n: number, index: number, maxSum: number): number {
+  const left = (target, index) => {
+    let result = 0;
+    target--;
+
+    for (let i = index - 1; i >= 0; i--) {
+      result += target--;
+      if (target < 1) {
+        result += i;
+        break;
+      }
+    }
+
+    return result;
+  };
+
+  const right = (target, index, n) => {
+    let result = 0;
+    target--;
+    for (let i = index + 1; i < n; i++) {
+      result += target--;
+      if (target < 1) {
+        result += n - i - 1;
+        break;
+      }
+    }
+
+    return result;
+  };
+
+  // console.log(left(4, 5));
+  // console.log(right(4, 5, 10));
+  let target = maxSum - (n - 1); //다른데 1이 하나씩 다 있다고 생각했을때, target은 최대 maxSum에서 n-1뺀거만큼될수있다.
+  while (target >= 0) {
+    const l = left(target, index);
+    const r = right(target, index, n);
+    if (l + target + r <= maxSum) {
+      break;
+    }
+    // console.log(target, l, r);
+    target--;
+  }
+
+  // console.log(target)
+  return target;
+}
+```
+
+- 망한 코드 1
+
+```javascript
+function recursive(
+  i: number,
+  accStr: string,
+  accSum: number,
+  accMax: number,
+  curIndex: number,
+  n: number,
+  index: number,
+  maxSum: number
+) {
+  if (accSum > maxSum) {
+    return false;
+  }
+
+  if (curIndex >= n - 1) {
+    console.log(accStr);
+    return true;
+  }
+
+  if (index === curIndex) {
+    if (i < accMax) {
+      return;
+    }
+  }
+
+  if (curIndex < index) {
+    // maximize해야한다
+    if (i + 1 < n) {
+      recursive(
+        i + 1,
+        accStr + (i + 1),
+        accSum + i + 1,
+        i + 1,
+        curIndex + 1,
+        n,
+        index,
+        maxSum
+      );
+    }
+
+    // if(i - 1 > 0){
+    //     recursive(i-1, accStr + (i-1), accSum+i-1, accMax, curIndex+1, n, index, maxSum);
+    // }
+
+    recursive(
+      i,
+      accStr + i,
+      accSum + i,
+      accMax,
+      curIndex + 1,
+      n,
+      index,
+      maxSum
+    );
+  } else {
+    if (i - 1 > 0) {
+      recursive(
+        i - 1,
+        accStr + (i - 1),
+        accSum + i - 1,
+        accMax,
+        curIndex + 1,
+        n,
+        index,
+        maxSum
+      );
+    }
+
+    // recursive(i, accStr + (i), accSum+i, accMax, curIndex+1, n, index, maxSum);
+  }
+}
+
+function maxValue(n: number, index: number, maxSum: number): number {
+  let answer = 0;
+  for (let i = 1; i <= n; i++) {
+    recursive(i, "" + i, i, i, 0, n, index, maxSum);
+  }
+
+  return answer;
+}
+```
+
+- 망한 코드 2:
+
+```javascript
+let answer = 0;
+
+function recursive(
+  i: number,
+  accStr: string,
+  accSum: number,
+  accMax: number,
+  curIndex: number,
+  n: number,
+  index: number,
+  maxSum: number
+) {
+  if (accSum > maxSum) {
+    return;
+  }
+
+  if (curIndex >= n - 1) {
+    if (answer < accMax) {
+      answer = accMax;
+    }
+    // console.log(accStr);
+    return;
+  }
+
+  if (index === curIndex) {
+    if (i < accMax) {
+      return;
+    }
+  }
+
+  if (curIndex < index) {
+    // maximize해야한다
+    if (i + 1 < n) {
+      recursive(
+        i + 1,
+        accStr + (i + 1),
+        accSum + i + 1,
+        i + 1,
+        curIndex + 1,
+        n,
+        index,
+        maxSum
+      );
+    }
+
+    if (i - 1 > 0) {
+      recursive(
+        i - 1,
+        accStr + (i - 1),
+        accSum + i - 1,
+        accMax,
+        curIndex + 1,
+        n,
+        index,
+        maxSum
+      );
+    }
+
+    recursive(
+      i,
+      accStr + i,
+      accSum + i,
+      accMax,
+      curIndex + 1,
+      n,
+      index,
+      maxSum
+    );
+  } else {
+    if (i - 1 > 0) {
+      recursive(
+        i - 1,
+        accStr + (i - 1),
+        accSum + i - 1,
+        accMax,
+        curIndex + 1,
+        n,
+        index,
+        maxSum
+      );
+    }
+
+    recursive(
+      i,
+      accStr + i,
+      accSum + i,
+      accMax,
+      curIndex + 1,
+      n,
+      index,
+      maxSum
+    );
+  }
+}
+
+function maxValue(n: number, index: number, maxSum: number): number {
+  // let answer = 0;
+  for (let i = 1; i <= 9; i++) {
+    recursive(i, "" + i, i, i, 0, n, index, maxSum);
+  }
+
+  return answer;
+}
+```
